# MandelbrotExplorer

./: CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
src/: Mandelbrot.cpp  Mandelbrot.h  ThreadPool.cpp  ThreadPool.h  main.cpp
